--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,55 @@
 # node_modules 等依赖包
 node_modules/
 
-# 构建产物
-dist/
-build/
+# 上传的文件
+backend/uploads/
 
-# VSCode 用户配置（非必要）
-.vscode/settings.json
+# 数据库文件
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+
+# Docker 镜像文件
+*.tar
+*.tar.gz
+*.tar.gz.sha256
+
+# 日志文件
+*.log
+logs/
+
+# 环境变量文件
+.env
+.env.local
+.env.*.local
+
+# 编辑器配置
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 系统文件
+.DS_Store
+Thumbs.db
 
 # 临时文件
-*.log
 *.tmp
-*.bak
+*.temp
+tmp/
+temp/
 
-# 忽略图片上传文件夹
-backend/uploads/
+# 备份文件
+*.bak
+*.backup
+backup/
+
+# 测试覆盖率
+coverage/
+.nyc_output/
+
+# 构建输出
+dist/
+build/
