--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
