--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "STEREOWOOD Color Management System - Simplified for Factory Use (3-5 users)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
     "backup": "node scripts/backup.js",
     "restore": "node scripts/restore.js"
   },
