--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "nodemon": "^3.0.2"
   },
   "engines": {
